[build-system]
requires = ["setuptools >= 68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "road-traffic"
description = "A data product using the DfT Road Traffic API."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Sezgin Tunc" }]
dependencies = [
  "requests>=2.31.0",
  "pandas>=2.2.0",
  "matplotlib>=3.8.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
